# PDF2CSV

./: .env  .gitignore  README.md  api.py  pdf_to_markdown.py  pyproject.toml  requirements.txt
backend/: constants.py  data_models.py  reformat_buildings.py  reformat_item.py  tableextracter.py
data/: AlexanderHospital.md  AlexanderHospital_buildings.csv  AlexanderHospital_items.csv  building_schema.json  item_schema.json  picklist_values.json
frontend/: app.py
